<resources>
    <string name="app_name">PalmNotes</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>

    <string name="new_note">New Note</string>
    <string name="note_hint">Begin typing here…</string>
    <string name="title_hint">Title</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="note_contents_example">Preview text…</string>
    <string name="note_title_example">Example Title</string>
    <string name="note_filename_example">ExampleFile.txt</string>
    <string name="setting_filename_hide">Hide filename</string>
    <string name="setting_big_title">Emphasize title</string>
    <string name="setting_contents_hide">Hide contents preview</string>
    <string name="setting_editor_category">Editor</string>
    <string name="setting_editor_larger">Larger editor</string>
    <string name="setting_serif_title">Serif title</string>
    <string name="setting_main_category">Main</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Sure?</string>

</resources>